# home-ubu

./: .bash_aliases  .bashrc  .gitconfig  .gitignore  EqInstance.hs  Makefile  Numberish.hs  Sentence.hs  adtVehicles.hs  adtsRecord.hs  anonSharing.hs  caseCoder.hs  class.hs  database.hs  example.hs  fire-keramik.hs  fire-keramik.md  foldPattern.hs  fsscript.hs  hello-world.hs  hscript.hs  mc91.hs  orAny.hs  palindrome.hs  partialSafe.hs  tensD.hs  wordsLines.hs
.atom/: config.cson  styles.less
.config/autostart/: redshift-gtk.desktop
.config/git/: config  ignore
.ghc/: ghci.conf  ghci_history
.ghc/x86_64-linux-7.10.3/package.conf.d/: HTTP-4000.3.3-e1f1eda66ea0aa26ce071f08c08703c8.conf  MonadCatchIO-transformers-0.3.1.3-3f6f0733eb64c0e4246e2d61a80858c5.conf  MonadRandom-0.4.2.2-5ed854925a13255a5ca496740c17fb6e.conf  QuickCheck-2.9.1-83142ef43f4fbf73aa5fdd275f99f334.conf  SafeSemaphore-0.10.1-ccf1a799f55511d530f96d140bbb2173.conf  StateVar-1.1.0.3-8283c9355d2fc1ad397281acceca5467.conf  adjunctions-4.3-4b555f69b6dbf07613b4584576ae5a71.conf  aeson-0.11.1.4-f8d01109f124104573d2e974dfd9f2c4.conf  aeson-pretty-0.7.2-e63dbf354b61a21e9e2545a6609c7a61.conf  (+93 more)
.stack/: config.yaml
.xmonad/: xmobarrc  xmonad.hs  xmonad.state
applicative/: anagram.hs  applic-wkshp.md  applicDo.hs  brisbin.hs  optEx.hs  short  short.hi  short.hs  shortlines.txt  snoyEx.hs  snoyman.hs  wkshpSlides.md  wkshpSlides1.mdown
applicative/optex/: optex.cabal
applicative/optex/src/: Main.hs
courses/: list-course.md
fpco/: open-syllabus.md
hello/: hello.cabal
hello/src/: Main.hs
