name:                hello
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Julie Moronuki
maintainer:          srs_haskell_cat@aol.com
copyright:           2016 Julie Moronuki
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hello
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
